feat: implement user authentication with signup and login functionality, add JWT middleware, and set up MongoDB connection

--- a/Twitter Clone/package.json
+++ b/Twitter Clone/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
   },
-  "author": "Sujan Timalsina AKA codewithsuzan",
+  "author": "Sujan Timalsina AKA imsuzan0",
   "license": "ISC",
   "description": "",
   "dependencies": {
