--- a/Voting App/package.json
+++ b/Voting App/package.json
@@ -16,6 +16,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+     "bcrypt": "^5.1.1"
   }
 }
